	build script.

	* test/: correct test's skipping added.

	* core/Cache/Memcached.class.php: mark peer as dead on link's failure.

2008-08-28	Konstantin V. Arkhipov

	* core/Form/Primitives/PrimitiveEnumeration.class.php: now tries to
	preserve type for integer values.

2008-08-26	Konstantin V. Arkhipov

	* global.inc.php.tpl: don't create useless fake classes in
	__autoload_failed().

2008-08-21	Konstantin V. Arkhipov

	* main/Criteria/Criteria.class.php: prevent useless join for lazy
	properties too, spotted by Denis Shumeev <denis-shumeev@yandex.ru>.

	* main/Base/AbstractProtoClass.class.php,
	main/Base/LightMetaProperty.class.php: unneeded encapsulant's
	prefetching eliminated, problem was spatted by Denis Shumeev
	<denis-shumeev@yandex.ru>.

2008-08-19	Evgeny V. Kokovikhin

	* main/Net/Http/Cookie.class.php, CookieCollection.class.php: new
	javaisms introduced.

2008-08-18	Vladlen Y. Koshelev

	* main/OQL/: OQL select query parser (from trunk).
	
	* test/core/OqlTokenizerTest.class.php, OqlSelectTest.class.php:
	corresponding tests.
	
	* core/Exceptions/SyntaxErrorException.class.php: exception to be used
	in parsers and syntax analyzers.
	
2008-08-14	Konstantin V. Arkhipov

	* core/OSQL/InsertOrUpdateQuery.class.php: lazySet() now aware of
	broken Time::toString(), which is fixed in trunk by removal of
	toFullString() in favour of correct toString().

2008-08-12	Vladlen Y. Koshelev

	* core/Form/Filters/RussianTypograph.class.php: standalone tag content
	mistakenly typographized; spotted by Sergey M. Skachkov.

	* test/core/FiltersTest.class.php: corresponding test. 

2008-08-12	Denis M. Gabaidulin

	* main/DAOs/Workers/DalayedDropDaoWorker.class.php: new dao worker
	with delayed drop modified objects strategy.

2008-08-07	Ivan Y. Khvostishkov

	* meta/types/HttpUrlType.class.php: new internal type implemented.

2008-08-07	Konstantin V. Arkhipov

	* 1.0.6 released.

2008-08-05	Ivan Y. Khvostishkov

	* core/OSQL/OrderBy.class.php: nullsFirst(), nullsLast(),